# emotion_concepts

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt
config/: config.yaml
data/: activities.json  emotion_words.json
notebooks/: analysis.ipynb
scripts/: 00_generate_stories.py  01_extract_vectors.py  01b_extract_from_stories.py  02_validate_vectors.py  03_preference_analysis.py  04_behavioral_eval.py  05_steering_experiment.py  06_aime_eval.py
src/: __init__.py  behavioral_eval.py  emotion_vectors.py  preference_analysis.py  steering.py  validation.py
src/models/: __init__.py  base.py  hf_backend.py  hf_pool.py  ollama_backend.py  sglang_backend.py  vllm_backend.py
